--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^3.4.0",
+    "jquery": "^3.4.1",
     "ngx-webcam": "^0.2.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
